tests/paczka1/fuzzy1/79172646.err
Error in line 1: fR8DRmmTnsz A45 73,9
Error in line 8: mvmk A45 79,6
Error in line 11: fR8DRmmTnsz S465 53,7
Error in line 18: fR8DRmmTnsz A572 85,0
Error in line 22: 7S9 A45 4,2
Error in line 23: 7S9 A572 65,1
Error in line 25: Vhy3EM S465 30,2
Error in line 38: Dau9FoVjm A45 3\,4
Error in line 36: fR8DRmmTnsz A572 7,9
